--- a/hw1.css
+++ b/hw1.css
@@ -1,8 +1,27 @@
 body {
-    background-color: lightgrey;
+    background-color: #e7e7e7;
     font-family: Arial, Helvetica, sans-serif;
-    width: 700px;
-    margin: 1em auto;
+    width: 500px;
+    margin: auto;
+}
+
+table, th, td {
+    width: 100%;
+    border: 1px solid;
+    /* border-collapse: collapse; */
+}
+
+input:focus {
+    background-color: yellow;
+}
+
+footer {
+    position: fixed;
+    bottom: 300px;
+}
+
+textarea {
+    background-color: #f3f3f3;
 }
 
 .button {
