--- a/hw1.css
+++ b/hw1.css
@@ -1,7 +1,7 @@
 body {
     background-color: #e7e7e7;
     font-family: Arial, Helvetica, sans-serif;
-    width: 500px;
+    width: 530px;
     margin: auto;
     /*
     display: flex;
@@ -14,11 +14,22 @@ nav {
     flex-direction: column;
 }
 
+pre {
+    font-size: x-large;
+    font-weight: bold;
+}
+
 /* table, th, td { */
 table {
     width: 100%;
     border: 1px solid;
     border-collapse: collapse;
+}
+
+caption {
+    font-size: x-large;
+    font-weight: bold;
+    margin-bottom: 0.3em;
 }
 
 th, td {
@@ -28,6 +39,20 @@ th, td {
 
 th.right, td.right {
     text-align: right;
+}
+
+/*
+thead {
+    background-color: lightsteelblue;
+
+*/
+
+tr:nth-child(odd) {
+    background-color:rgb(208, 216, 227);
+}
+
+tr:nth-child(even){
+    background-color: aliceblue;
 }
 
 input:focus {
