--- a/hw1.css
+++ b/hw1.css
@@ -90,3 +90,12 @@ textarea {
     background-color: lightgreen ;
     color: black;
 }
+
+#successMsg {
+    font-size: large;
+    color: green;
+}
+#errMsg {
+    font-size: large;
+    color: red;
+}
